[package]
name        = "cachingmap"
version     = "0.2.0"
edition     = "2018"
authors     = ["Aurelien Naldi <aurelien.naldi@gmail.com>"]
repository  = "https://github.com/aurelien-naldi/cachingmap"
description = "A caching Hashmap accepting new entries through interior-mutability"
license     = "LGPL-3.0-or-later"
exclude = [
    ".github",
    ".gitignore",
]

[dependencies]

